Adding initial run script